@@ -1,4 +1,5 @@
 dev:
+   * add index attribute to HDF5 files to store the used index
    * add headonly argument to writeh5 to support writing of the stats
      dictionary into an existing HDF5 database
 v0.2.1:
